Camera Location, keyframe Bug #58739

Closed
opened 2018-12-04 21:40:30 +01:00 by Philip · 26 comments

System Information
Operating system: Win 10 64 bit
Graphics card: 2xGTX 1080 Ti

Blender Version
Broken:
2.80, 2018-12-03, a205493426
Worked: (optional)

Short description of error
When camera location keyframed beyond timeline(or sometimes in) can't change keyframed values from 1st keyframe.

Exact steps for others to reproduce the error
Create camera, set view to camera, add keyframe, change position on timeline, move camera in location tab - its looking like view is still only outframe of camera is moving and changing visual od depth. After release for ex OY location it will back to value from first keyframe. If description will be not enough I can provide video.

**System Information** Operating system: Win 10 64 bit Graphics card: 2xGTX 1080 Ti **Blender Version** Broken: 2.80, 2018-12-03, a205493426b Worked: (optional) **Short description of error** When camera location keyframed beyond timeline(or sometimes in) can't change keyframed values from 1st keyframe. **Exact steps for others to reproduce the error** Create camera, set view to camera, add keyframe, change position on timeline, move camera in location tab - its looking like view is still only outframe of camera is moving and changing visual od depth. After release for ex OY location it will back to value from first keyframe. If description will be not enough I can provide video.
Author

Added subscriber: @DrPhil

Added subscriber: @DrPhil

#60318 was marked as duplicate of this issue

#60318 was marked as duplicate of this issue

#58241 was marked as duplicate of this issue

#58241 was marked as duplicate of this issue

#58725 was marked as duplicate of this issue

#58725 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this issue. All location values does not seem to reset to previous value (unless the timeline is changed).

I can not reproduce this issue. All location values does not seem to reset to previous value (unless the timeline is changed).
Author
I will attach link with video: https://drive.google.com/open?id=1e8n_MVjLIDVREjyKuzeGRPk_iln0qU3f

Is this still a problem for you if you switch to solid mode? Perhaps it's a problem with the rendered view.

However, I still have a hard time to reproduce this issue on my side (I'm on linux and built blender from git).
I'm trying to reproduce this issue with the default blender cube scene and I'm having no luck with that.

It would be really helpful if you could create a minimal blend file that have the issue and upload it here.

Is this still a problem for you if you switch to solid mode? Perhaps it's a problem with the rendered view. However, I still have a hard time to reproduce this issue on my side (I'm on linux and built blender from git). I'm trying to reproduce this issue with the default blender cube scene and I'm having no luck with that. It would be really helpful if you could create a minimal blend file that have the issue and upload it here.
Author

camera_bug.blend

Here is a file - try to change OY and keyframe it while in view to camera

[camera_bug.blend](https://archive.blender.org/developer/F5833423/camera_bug.blend) Here is a file - try to change OY and keyframe it while in view to camera

I can reproduce the issue on my end with that file, thanks!

I can reproduce the issue on my end with that file, thanks!

Have you tried any newer blender versions? If I open up your scene and duplicate the camera and set that one as the active camera, it does not have this problem.
I'm beginning to suspect that this issue has been solved in never 2.8 builds. But files created with older builds are still bugged.

Have you tried any newer blender versions? If I open up your scene and duplicate the camera and set that one as the active camera, it does not have this problem. I'm beginning to suspect that this issue has been solved in never 2.8 builds. But files created with older builds are still bugged.
Author

Video I sent was from a20549342 version from 2 days ago

and file I sent was created in be91d4ef9 version that is from yesterday

Video I sent was from a20549342 version from 2 days ago and file I sent was created in be91d4ef9 version that is from yesterday

Does the problem still happen if you copy the camera and set the copy as the active scene camera?

Does the problem still happen if you copy the camera and set the copy as the active scene camera?
Author

Yes, it behave in same way. But if I "go out" of camera it start working properly.

Yes, it behave in same way. But if I "go out" of camera it start working properly.
Author

Now I deleted this copied camera and again select old camera as active and now it looks like it is working properly.

Now I deleted this copied camera and again select old camera as active and now it looks like it is working properly.
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-06 10:07:11 +01:00

According to angavrilov on IRC, this seem to be a depsgraph issue:

angavrilov | DarkDefender: right, after a brief look it seems something fishy may be happening with the AnimData->recalc flag - it's probably related to COW and depsgraph, so need to discuss with hackerman-
angavrilov | DarkDefender: basically, it seems if that flag is set on the non-COW instance, it is never cleaned up and forces animation to be re-evaluated every time
angavrilov | DarkDefender: If I clear that stuck flag from that camera object in the debugger, the bug is fixed

According to angavrilov on IRC, this seem to be a depsgraph issue: > angavrilov | DarkDefender: right, after a brief look it seems something fishy may be happening with the AnimData->recalc flag - it's probably related to COW and depsgraph, so need to discuss with hackerman- > angavrilov | DarkDefender: basically, it seems if that flag is set on the non-COW instance, it is never cleaned up and forces animation to be re-evaluated every time > angavrilov | DarkDefender: If I clear that stuck flag from that camera object in the debugger, the bug is fixed

Added subscribers: @angavrilov, @brecht

Added subscribers: @angavrilov, @brecht

@angavrilov , why not to talk here, huh ;)

I am a strong believer in theory that AnimData->recalc flag is to be forgotten, gone and never brought back. It is kind of conflicts with granularity nature of the new dependency graph.

This is also something, i believe, we've discussed with @brecht about IDs -- they shouldn't get recalc flags set nowadays.

@angavrilov , why not to talk here, huh ;) I am a strong believer in theory that AnimData->recalc flag is to be forgotten, gone and never brought back. It is kind of conflicts with granularity nature of the new dependency graph. This is also something, i believe, we've discussed with @brecht about IDs -- they shouldn't get recalc flags set nowadays.

Added subscriber: @JaySchay

Added subscriber: @JaySchay

Added subscriber: @d.asap

Added subscriber: @d.asap

i experience the same problem on keyframing bug. the only way to pass it is to edit it via graph editor

i experience the same problem on keyframing bug. the only way to pass it is to edit it via graph editor

Added subscriber: @camomiles

Added subscriber: @camomiles

Added subscriber: @andylemoine1

Added subscriber: @andylemoine1

This issue was referenced by 259879e135

This issue was referenced by 259879e135476da6255d1411d66089ccdc78ad9d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Added subscribers: @MarcinTwarowski, @CanapyLefarcy-2, @technoendo, @bent, @JacquesLucke
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58739
No description provided.