Fix T58739: Camera Location, keyframe Bug

This was originally caused by fix for T53788. Not sure why extra
`where_is` is needed there, the object is supposed to be evaluated
already.